--- a/service-file-solana-tds-v4.2
+++ b/service-file-solana-tds-v4.2
@@ -42,8 +42,9 @@ ExecStart=/root/.local/share/solana/install/active_release/bin/solana-validator 
   --limit-ledger-size 50000000 \
   --entrypoint ${ENTRYPOINT} \
   --expected-genesis-hash ${EXPECTED_GENESIS_HASH} \
-  --expected-shred-version ${EXPECTED_SHRED_VERSION} \
   --trusted-validator ${TRUSTED_VALIDATOR1} \
+  --trusted-validator ${TRUSTED_VALIDATOR2} \
+  --trusted-validator ${TRUSTED_VALIDATOR3} \
   --trusted-validator ${TRUSTED_VALIDATOR5} 
 
 [Install]
