--- a/service-file-solana-tds-v4.2
+++ b/service-file-solana-tds-v4.2
@@ -40,13 +40,14 @@ ExecStart=/root/.local/share/solana/install/active_release/bin/solana-validator 
   --no-untrusted-rpc \
   --rpc-bind-address localhost \
   --limit-ledger-size 50000000 \
+  --snapshot-interval-slots 2500 \
   --entrypoint ${ENTRYPOINT} \
   --expected-genesis-hash ${EXPECTED_GENESIS_HASH} \
-  --expected-shred-version ${EXPECTED_SHRED_VERSION} \
-  --trusted-validator ${TRUSTED_VALIDATOR1} \
-  --trusted-validator ${TRUSTED_VALIDATOR2} \
-  --trusted-validator ${TRUSTED_VALIDATOR3} \
-  --trusted-validator ${TRUSTED_VALIDATOR5} 
+  --no-snapshot-fetch \
+  --known-validator ${TRUSTED_VALIDATOR1} \
+  --known-validator ${TRUSTED_VALIDATOR2} \
+  --known-validator ${TRUSTED_VALIDATOR3} \
+  --known-validator ${TRUSTED_VALIDATOR5} 
 
 [Install]
 WantedBy=multi-user.target
@@ -57,3 +58,4 @@ WantedBy=multi-user.target
 #  --trusted-validator ${TRUSTED_VALIDATOR2} \
 #  --trusted-validator ${TRUSTED_VALIDATOR3} \
 #  --trusted-validator ${TRUSTED_VALIDATOR4}
+#  --expected-shred-version ${EXPECTED_SHRED_VERSION} \
