--- a/service-file-solana-tds-v4.2
+++ b/service-file-solana-tds-v4.2
@@ -48,8 +48,6 @@ ExecStart=/root/.local/share/solana/install/active_release/bin/solana-validator 
   --known-validator ${TRUSTED_VALIDATOR3} \
   --known-validator ${TRUSTED_VALIDATOR5} \
   --wait-for-supermajority 95038710 \
-  --no-snapshot-fetch \
-  --no-genesis-fetch \
   --expected-bank-hash E3MJucWkWkugqJ8ewHAkDWuCN6uDxEychwjFFCwJ16ic \
   --expected-shred-version 50850 \
   --known-validator 3K8BYGTPD9AxqYQDPdU8PPy6AfiSwf4hDmFy1xXGB8Ns \
@@ -69,3 +67,5 @@ WantedBy=multi-user.target
 #  --trusted-validator ${TRUSTED_VALIDATOR3} \
 #  --trusted-validator ${TRUSTED_VALIDATOR4}
 #  --expected-shred-version ${EXPECTED_SHRED_VERSION} \
+#  --no-snapshot-fetch \
+#  --no-genesis-fetch \
