--- a/service-file-solana-tds-v4.2
+++ b/service-file-solana-tds-v4.2
@@ -47,9 +47,8 @@ ExecStart=/root/.local/share/solana/install/active_release/bin/solana-validator 
   --known-validator ${TRUSTED_VALIDATOR2} \
   --known-validator ${TRUSTED_VALIDATOR3} \
   --known-validator ${TRUSTED_VALIDATOR5} \
-  --wait-for-supermajority 95038710 \
-  --expected-bank-hash E3MJucWkWkugqJ8ewHAkDWuCN6uDxEychwjFFCwJ16ic \
-  --expected-shred-version 50850 \
+  --no-snapshot-fetch \
+  --no-genesis-fetch \
   --known-validator 3K8BYGTPD9AxqYQDPdU8PPy6AfiSwf4hDmFy1xXGB8Ns \
   --known-validator 5dB4Ygb8Sf3Sssdxxrpbb4NFX9bMrYnieiz11Vr5xJkJ \
   --known-validator 7TcmJn12spW6KQJp4fvvo45d1hpxS8EnLjKMxihtNZ1V \
