--- a/service-file-solana-tds-v4.2
+++ b/service-file-solana-tds-v4.2
@@ -1,5 +1,5 @@
 #=====================================================================================================================================
-# TdS service file 09/04/2021 [ver.1.6.4] [after update]
+# TdS service file [ver.21.10.23] [after update]
 #=====================================================================================================================================
 [Unit]
 Description=Solana TdS node
@@ -38,7 +38,7 @@ ExecStart=/root/.local/share/solana/install/active_release/bin/solana-validator 
   --log - \
   --private-rpc \
   --no-untrusted-rpc \
-  --rpc-bind-address localhost \
+  --rpc-bind-address 127.0.0.1 \
   --limit-ledger-size 50000000 \
   --snapshot-interval-slots 2500 \
   --entrypoint ${ENTRYPOINT} \
@@ -49,6 +49,11 @@ ExecStart=/root/.local/share/solana/install/active_release/bin/solana-validator 
   --known-validator ${TRUSTED_VALIDATOR5} \
   --no-snapshot-fetch \
   --no-genesis-fetch \
+  --known-validator eoKpUABi59aT4rR9HGS3LcMecfut9x7zJyodWWP43YQ \
+  --known-validator F1TuusSghAobmbGAgNrdxRS9nBjwT6J1yyALUvpEA1is \
+  --known-validator 9YVpEeZf8uBoUtzCFC6SSFDDqPt16uKFubNhLvGxeUDy \
+  --known-validator GmgV3mnVohRz99rsnMNWNFqzop4oSgNv6Hx1kE7PKvYU \
+  --known-validator GcibmF4zgb6Vr4bpZZYHGDPZNWiLnBDUHdpJZTsTDvwe \
   --known-validator 3K8BYGTPD9AxqYQDPdU8PPy6AfiSwf4hDmFy1xXGB8Ns \
   --known-validator 5dB4Ygb8Sf3Sssdxxrpbb4NFX9bMrYnieiz11Vr5xJkJ \
   --known-validator 7TcmJn12spW6KQJp4fvvo45d1hpxS8EnLjKMxihtNZ1V \
