--- a/service-file-solana-tds-v4.2
+++ b/service-file-solana-tds-v4.2
@@ -41,8 +41,10 @@ ExecStart=/root/.local/share/solana/install/active_release/bin/solana-validator 
   --rpc-bind-address 127.0.0.1 \
   --limit-ledger-size 50000000 \
   --snapshot-interval-slots 2500 \
+  --entrypoint 5.9.35.85:8001 \
   --entrypoint ${ENTRYPOINT} \
   --expected-genesis-hash ${EXPECTED_GENESIS_HASH} \
+  --known-validator 8Ce22R38MddAZSpEhLC38BqUEzVAcZh7h9MgfVCWibN3 \
   --known-validator ${TRUSTED_VALIDATOR1} \
   --known-validator ${TRUSTED_VALIDATOR2} \
   --known-validator ${TRUSTED_VALIDATOR3} \
