--- a/service-file-solana-tds-v4.2
+++ b/service-file-solana-tds-v4.2
@@ -37,6 +37,7 @@ ExecStart=/root/.local/share/solana/install/active_release/bin/solana-validator 
   --rpc-port 8899 \
   --log - \
   --private-rpc \
+  --full-rpc-api \
   --no-untrusted-rpc \
   --rpc-bind-address 127.0.0.1 \
   --limit-ledger-size 50000000 \
