--- a/service-file-solana-tds-v4.2
+++ b/service-file-solana-tds-v4.2
@@ -41,7 +41,11 @@ ExecStart=/root/.local/share/solana/install/active_release/bin/solana-validator 
   --no-untrusted-rpc \
   --rpc-bind-address 127.0.0.1 \
   --limit-ledger-size 50000000 \
-  --snapshot-interval-slots 2500 \
+  --incremental-snapshots \
+  --full-snapshot-interval-slots 25000 \
+  --incremental-snapshot-interval-slots 1000 \
+  --maximum-full-snapshots-to-retain 2 \
+  --maximum-incremental-snapshots-to-retain 4 \
   --entrypoint 5.9.35.85:8001 \
   --entrypoint ${ENTRYPOINT} \
   --expected-genesis-hash ${EXPECTED_GENESIS_HASH} \
@@ -69,13 +73,3 @@ ExecStart=/root/.local/share/solana/install/active_release/bin/solana-validator 
 
 [Install]
 WantedBy=multi-user.target
-
-# --hard-fork ${HARD_FORK} \
-# --entrypoint tds-bootstrap.certus.one:8000
-# --no-check-vote-account
-#  --trusted-validator ${TRUSTED_VALIDATOR2} \
-#  --trusted-validator ${TRUSTED_VALIDATOR3} \
-#  --trusted-validator ${TRUSTED_VALIDATOR4}
-#  --expected-shred-version ${EXPECTED_SHRED_VERSION} \
-#  --no-snapshot-fetch \
-#  --no-genesis-fetch \
