--- a/service-file-solana-tds-v4.2
+++ b/service-file-solana-tds-v4.2
@@ -15,18 +15,8 @@ LimitNOFILE=2048000
 
 Environment="SOLANA_METRICS_CONFIG="host=https://metrics.solana.com:8086,db=tds,u=testnet_write,p=c4fa841aa918bf8274e3e2a44d77568d9861b3ea""
 Environment="RUST_LOG=solana=info"
-Environment="ENTRYPOINT=entrypoint.testnet.solana.com:8001"
 Environment="EXPECTED_GENESIS_HASH=4uhcVJyU9pJkvQyS88uRDiswHXSCkY3zQawwpjk2NsNY"
-Environment="EXPECTED_BANK_HASH=G4vJCyJXY1u8An6bdtoPNBdTFDwTtre7vvvKGpSyzL6q"
-Environment="SUPERMAJORITY=70430039"
 Environment="EXPECTED_SHRED_VERSION=24371"
-Environment="HARD_FORK=50438183"
-Environment="TRUSTED_VALIDATOR1=5D1fNXzvv5NjV1ysLjirC4WY92RNsVH18vjmcszZd8on"
-Environment="TRUSTED_VALIDATOR2=Ft5fbkqNa76vnsjYNwjDZUXoTWpP7VYm3mtsaQckQADN"
-Environment="TRUSTED_VALIDATOR3=9QxCLckBiJc783jnMvXZubK4wH86Eqqvashtrwvcsgkv"
-Environment="TRUSTED_VALIDATOR4=ta1Uvfb7W5BRPrdGnhP9RmeCGKzBySGM1hTE4rBRy6T"
-Environment="TRUSTED_VALIDATOR5=7XSY3MrYnK8vq693Rju17bbPkCN3Z7KvvfvJx4kdrsSY"
-
 
 ExecStart=/root/.local/share/solana/install/active_release/bin/solana-validator \
   --ledger /root/solana/validator-ledger \
@@ -48,7 +38,9 @@ ExecStart=/root/.local/share/solana/install/active_release/bin/solana-validator 
   --maximum-incremental-snapshots-to-retain 4 \
   --maximum-local-snapshot-age 2000 \
   --entrypoint 5.9.35.85:8001 \
-  --entrypoint ${ENTRYPOINT} \
+  --entrypoint entrypoint.testnet.solana.com:8001 \
+  --entrypoint entrypoint2.testnet.solana.com:8001 \
+  --entrypoint entrypoint3.testnet.solana.com:8001 \
   --expected-genesis-hash ${EXPECTED_GENESIS_HASH} \
   --known-validator 8Ce22R38MddAZSpEhLC38BqUEzVAcZh7h9MgfVCWibN3 \
   --known-validator ${TRUSTED_VALIDATOR1} \
@@ -58,6 +50,7 @@ ExecStart=/root/.local/share/solana/install/active_release/bin/solana-validator 
   --no-snapshot-fetch \
   --no-genesis-fetch \
   --known-validator eoKpUABi59aT4rR9HGS3LcMecfut9x7zJyodWWP43YQ \
+  --known-validator 4ZtE2XX6oQThPpdjwKXVMphTTZctbWwYxmcCV6xR11RT \
   --known-validator F1TuusSghAobmbGAgNrdxRS9nBjwT6J1yyALUvpEA1is \
   --known-validator 9YVpEeZf8uBoUtzCFC6SSFDDqPt16uKFubNhLvGxeUDy \
   --known-validator GmgV3mnVohRz99rsnMNWNFqzop4oSgNv6Hx1kE7PKvYU \
