--- a/service-file-solana-tds-v4.2
+++ b/service-file-solana-tds-v4.2
@@ -1,5 +1,5 @@
 #=====================================================================================================================================
-# TdS service file [ver.21.10.23] [after update]
+# TdS service file [ver.22.08.11] [after update]
 #=====================================================================================================================================
 [Unit]
 Description=Solana TdS node
@@ -15,8 +15,8 @@ LimitNOFILE=2048000
 
 Environment="SOLANA_METRICS_CONFIG="host=https://metrics.solana.com:8086,db=tds,u=testnet_write,p=c4fa841aa918bf8274e3e2a44d77568d9861b3ea""
 Environment="RUST_LOG=solana=info"
-Environment="EXPECTED_GENESIS_HASH=4uhcVJyU9pJkvQyS88uRDiswHXSCkY3zQawwpjk2NsNY"
 Environment="EXPECTED_SHRED_VERSION=24371"
+
 
 ExecStart=/root/.local/share/solana/install/active_release/bin/solana-validator \
   --ledger /root/solana/validator-ledger \
@@ -41,16 +41,15 @@ ExecStart=/root/.local/share/solana/install/active_release/bin/solana-validator 
   --entrypoint entrypoint.testnet.solana.com:8001 \
   --entrypoint entrypoint2.testnet.solana.com:8001 \
   --entrypoint entrypoint3.testnet.solana.com:8001 \
-  --expected-genesis-hash ${EXPECTED_GENESIS_HASH} \
+  --expected-genesis-hash 4uhcVJyU9pJkvQyS88uRDiswHXSCkY3zQawwpjk2NsNY \
   --known-validator 8Ce22R38MddAZSpEhLC38BqUEzVAcZh7h9MgfVCWibN3 \
-  --known-validator ${TRUSTED_VALIDATOR1} \
-  --known-validator ${TRUSTED_VALIDATOR2} \
-  --known-validator ${TRUSTED_VALIDATOR3} \
-  --known-validator ${TRUSTED_VALIDATOR5} \
+  --known-validator 5D1fNXzvv5NjV1ysLjirC4WY92RNsVH18vjmcszZd8on \
+  --known-validator Ft5fbkqNa76vnsjYNwjDZUXoTWpP7VYm3mtsaQckQADN \
+  --known-validator 9QxCLckBiJc783jnMvXZubK4wH86Eqqvashtrwvcsgkv \
+  --known-validator 7XSY3MrYnK8vq693Rju17bbPkCN3Z7KvvfvJx4kdrsSY \
   --no-snapshot-fetch \
   --no-genesis-fetch \
   --known-validator eoKpUABi59aT4rR9HGS3LcMecfut9x7zJyodWWP43YQ \
-  --known-validator 4ZtE2XX6oQThPpdjwKXVMphTTZctbWwYxmcCV6xR11RT \
   --known-validator F1TuusSghAobmbGAgNrdxRS9nBjwT6J1yyALUvpEA1is \
   --known-validator 9YVpEeZf8uBoUtzCFC6SSFDDqPt16uKFubNhLvGxeUDy \
   --known-validator GmgV3mnVohRz99rsnMNWNFqzop4oSgNv6Hx1kE7PKvYU \
