--- a/service-file-solana-tds-v4.2
+++ b/service-file-solana-tds-v4.2
@@ -37,7 +37,7 @@ ExecStart=/root/.local/share/solana/install/active_release/bin/solana-validator 
   --maximum-full-snapshots-to-retain 2 \
   --maximum-incremental-snapshots-to-retain 4 \
   --maximum-local-snapshot-age 2000 \
-  --entrypoint 5.9.35.85:8001 \
+  --entrypoint entrypoint.testnet.solana.sergo.dev:8001 \
   --entrypoint entrypoint.testnet.solana.com:8001 \
   --entrypoint entrypoint2.testnet.solana.com:8001 \
   --entrypoint entrypoint3.testnet.solana.com:8001 \
