--- a/service-file-solana-tds-v4.2
+++ b/service-file-solana-tds-v4.2
@@ -1,5 +1,5 @@
 #=====================================================================================================================================
-# TdS service file [ver.22.08.11] [after update]
+# TdS service file [ver.23.02] [after update]
 #=====================================================================================================================================
 [Unit]
 Description=Solana TdS node
@@ -24,6 +24,7 @@ ExecStart=/root/.local/share/solana/install/active_release/bin/solana-validator 
   --gossip-port 8001 \
   --rpc-port 8899 \
   --log - \
+  --disable-accounts-disk-index \
   --private-rpc \
   --full-rpc-api \
   --no-untrusted-rpc \
