--- a/service-file-solana-tds-v4.2
+++ b/service-file-solana-tds-v4.2
@@ -1,5 +1,5 @@
 #=====================================================================================================================================
-# TdS service file [ver.23.02] [after update]
+# TdS service file [ver.23.10] [after update]
 #=====================================================================================================================================
 [Unit]
 Description=Solana TdS node
@@ -26,41 +26,25 @@ ExecStart=/root/.local/share/solana/install/active_release/bin/solana-validator 
   --log - \
   --disable-accounts-disk-index \
   --private-rpc \
+  --only-known-rpc \
   --full-rpc-api \
-  --no-untrusted-rpc \
-  --rpc-bind-address 127.0.0.1 \
   --limit-ledger-size 50000000 \
   --full-snapshot-interval-slots 25000 \
   --incremental-snapshot-interval-slots 5000 \
   --maximum-full-snapshots-to-retain 2 \
   --maximum-incremental-snapshots-to-retain 4 \
-  --maximum-local-snapshot-age 2000 \
-  --entrypoint entrypoint.testnet.solana.sergo.dev:8001 \
+  --maximum-local-snapshot-age 5000 \
   --entrypoint entrypoint.testnet.solana.com:8001 \
   --entrypoint entrypoint2.testnet.solana.com:8001 \
   --entrypoint entrypoint3.testnet.solana.com:8001 \
   --expected-genesis-hash 4uhcVJyU9pJkvQyS88uRDiswHXSCkY3zQawwpjk2NsNY \
-  --known-validator 8Ce22R38MddAZSpEhLC38BqUEzVAcZh7h9MgfVCWibN3 \
-  --known-validator 5D1fNXzvv5NjV1ysLjirC4WY92RNsVH18vjmcszZd8on \
-  --known-validator Ft5fbkqNa76vnsjYNwjDZUXoTWpP7VYm3mtsaQckQADN \
-  --known-validator 9QxCLckBiJc783jnMvXZubK4wH86Eqqvashtrwvcsgkv \
-  --known-validator 7XSY3MrYnK8vq693Rju17bbPkCN3Z7KvvfvJx4kdrsSY \
+  --known-validator 7Np41oeYqPefeNQEHSv1UDhYrehxin3NStELsSKCT4K2 \
+  --known-validator GdnSyH3YtwcxFvQrVVJMm1JhTS4QVX7MFsX56uJLUfiZ \
+  --known-validator DE1bawNcRJB9rVm3buyMVfr8mBEoyyu73NBovf2oXJsJ \
+  --known-validator CakcnaRDHka2gXyfbEd2d3xsvkJkqsLw2akB3zsN1D2S \
+  --wal-recovery-mode skip_any_corrupted_record \
   --no-snapshot-fetch \
-  --no-genesis-fetch \
-  --known-validator eoKpUABi59aT4rR9HGS3LcMecfut9x7zJyodWWP43YQ \
-  --known-validator F1TuusSghAobmbGAgNrdxRS9nBjwT6J1yyALUvpEA1is \
-  --known-validator 9YVpEeZf8uBoUtzCFC6SSFDDqPt16uKFubNhLvGxeUDy \
-  --known-validator GmgV3mnVohRz99rsnMNWNFqzop4oSgNv6Hx1kE7PKvYU \
-  --known-validator GcibmF4zgb6Vr4bpZZYHGDPZNWiLnBDUHdpJZTsTDvwe \
-  --known-validator 3K8BYGTPD9AxqYQDPdU8PPy6AfiSwf4hDmFy1xXGB8Ns \
-  --known-validator 5dB4Ygb8Sf3Sssdxxrpbb4NFX9bMrYnieiz11Vr5xJkJ \
-  --known-validator 7TcmJn12spW6KQJp4fvvo45d1hpxS8EnLjKMxihtNZ1V \
-  --known-validator 4jhyvbBHbsRDF6och7pDQ7ahYTUr7wNkAYJTLLuMUtku \
-  --known-validator 4rVaXrd7BLSFZMSm4Lq63nxkVyezGxsQVpUhc9LqbxVk \
-  --known-validator 4z755TDizaUVyRRKw7y8DnTnnon8ksQYsZyU3feF6yFc \
-  --known-validator Bszp6hDL19ymPZ8efp9venQYb4ae2rRmEtVp4aG6k8nx \
-  --known-validator 8SRKNfvMerfA1BdU79CAwU4wNfjnDvFrBo3o5f5TS4uv \
-  --known-validator 82k4RGZAJxtXvW3hzgmHB2q4oDHzgwMR2cGXup324gsJ
-
+  --no-genesis-fetch
+  
 [Install]
 WantedBy=multi-user.target
