--- a/service-file-solana-tds-v4.2
+++ b/service-file-solana-tds-v4.2
@@ -43,9 +43,7 @@ ExecStart=/root/.local/share/solana/install/active_release/bin/solana-validator 
   --known-validator Ft5fbkqNa76vnsjYNwjDZUXoTWpP7VYm3mtsaQckQADN \
   --known-validator eoKpUABi59aT4rR9HGS3LcMecfut9x7zJyodWWP43YQ \
   --known-validator 9QxCLckBiJc783jnMvXZubK4wH86Eqqvashtrwvcsgkv \
-  --wal-recovery-mode skip_any_corrupted_record \
-  --no-snapshot-fetch \
-  --no-genesis-fetch
+  --wal-recovery-mode skip_any_corrupted_record
   
 [Install]
 WantedBy=multi-user.target
