--- a/service-file-solana-tds-v4.2
+++ b/service-file-solana-tds-v4.2
@@ -43,6 +43,7 @@ ExecStart=/root/.local/share/solana/install/active_release/bin/solana-validator 
   --known-validator Ft5fbkqNa76vnsjYNwjDZUXoTWpP7VYm3mtsaQckQADN \
   --known-validator eoKpUABi59aT4rR9HGS3LcMecfut9x7zJyodWWP43YQ \
   --known-validator 9QxCLckBiJc783jnMvXZubK4wH86Eqqvashtrwvcsgkv \
+  --use-snapshot-archives-at-startup when-newest \
   --wal-recovery-mode skip_any_corrupted_record
   
 [Install]
